[package]
name = "struct-map"
version = "0.1.0"
edition = "2021"
authors = ["chy <343938938@qq.com>"]
license = "MIT/Apache-2.0"
description = "struct transform map or map transform struct"

[lib]
path = "core/lib.rs"

[workspace]
members = ["to_hash_map"]
exclude = [
    "example"
]

[dependencies]
to_hash_map = "0.1"