[package]
name = "to_hash_map"
version = "0.1.0"
edition = "2021"
authors = ["chy <343938938@qq.com>"]
license = "MIT/Apache-2.0"
description = "struct transform hash map or hash map transform struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["derive", "printing"]}
# syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"